# quake-shooter

./: .gitmodules  Cargo.toml
resources/: bindings.ron  camera.ron  display_config.ron  paks
resources/ui/: hud.ron  loading.ron
src/: main.rs
